src/static/less/uxebu.less
/* ... */
.linkedin:before{.icon-before;.sprite-linkedin;}
.twitter{padding-left:36px;position:relative;}
.twitter:before{.icon-before;.sprite-twitter;}
.loupe{padding-left:36px;position:relative;}
.loupe:before{.icon-before;.sprite-loupe;}
.box-geek,
.star-business {
    padding-left:38px;position:relative;

    a {
        color: #fff;
    }
}
.box-geek:before{.icon-before;.sprite-box_yellow;}
.star-business:before{.icon-before;.sprite-star_blue;}
.marker{padding-left:14px;position:relative;}
.marker:before{.icon-before;.sprite-marker;}
.html-logo{.sprite;.sprite-html5;display:inline-block;}

.dropdown-arrow{padding-right:31px;position:relative;}
.dropdown-arrow:before{.icon-before;.sprite-dropdown_arrow;right:0;left:auto;}
.dropdown-arrow:hover, .active .dropdown-arrow{padding-right:31px;position:relative;}
.dropdown-arrow:hover:before, .active .dropdown-arrow:before{.icon-before;.sprite-dropdown_arrow_active;right:0;left:auto;}

.big-arrow-down{margin-bottom:39px;display:block;position:relative;}
.big-arrow-down:after{content:"";.sprite;.sprite-arrow_down;position:absolute;bottom:-39px;left:50%;margin-left:-19px;}
.big-arrow-up{margin-top:39px;display:block;position:relative;}
.big-arrow-up:after{content:"";.sprite;.sprite-arrow_up;position:absolute;top:-39px;left:50%;margin-left:-19px;}

/* resetting padding for ie6/7 as they don't support :after/:before */
.ie6, .ie7 {
    .arrow-business, .arrow-geek,
    .email, .github, .linkedin,
    .twitter, .box-geek, .marker,
    .star-business {padding-left:0;}
    .dropdown-arrow {padding-right:0;}
}
.business-flag {position:relative;}
.business-flag:before {content:"";.sprite;.sprite-flag_blue;position:absolute;right:20px;top:-7px;}

.geek-flag {position:relative;}
.geek-flag:before {content:"";.sprite;.sprite-flag_yellow;position:absolute;right:20px;top:-8px;}

.banner-human {position:relative;}
.banner-human:before {content:"";.sprite;.sprite-banner_human;position:absolute;right:-8px;top:-8px;}

.nav {
    position:relative;
    display: inline-block;
}

.active a {
    position:relative;
    margin-top:20px;
}

.nav .active a:after {
    content:"";
    position:absolute;
    .sprite;
    .sprite-wedge;
    left:20%;
    bottom:-24px;
}

.nav .active .dropdown-arrow{color:@link-color;text-decoration:none;}
.nav .active .dropdown-arrow:after{display:none;}

.dropdown {
    position: absolute; top: 45px; right: 20px; width: 370px; z-index: 3; padding-top: 4px;
    display: none;

    h4 {
        line-height: 1.3;
    }

    a,
    a:hover {
        color: #fff;
    }

    p {
        .pbs;
        .mbn;
    }

    ul {
        .mhn;
    }

    li {
        .phm;
    }

    .active,  li:hover {
        background:url(../img/bg_trans_white_light.png) repeat;
    }

    li:last-of-type {
        .border-bottom-radius(12px);
    }

}

.nav .list-el:hover .dropdown,
.dropdown:hover {
    display: block;
}

.header {overflow: visible; position: relative;}
.footer {text-align:center;}
.photos .list-el{margin-right:70px;}
.photos a { .mbx; }
.bullet {

    h4 {
        .man;
        .mhm;
    }

    p {
        .mhm;
        .mbm;
        .mtn;
    }

    h4 {
        .pts;
        font-weight: 600;
    }
}

.list-selection {
    .mhn;
    .media {
        .man;
        margin-bottom:2px;
        display:block;
    }
    a {
        display:block;
        color:white;
        text-decoration:none;
        .phx;
        margin-top:0;
    }
    .active,  li:hover {
        background:url(../img/bg_trans_white_light.png) repeat;
    }
    .active a {
        font-weight:600;
    }

    .bd {
        .phl;
        .ptm;
    }
}


.trailer {
    position: relative;
    margin-top: 60px;
    .mbx;

    a {
        color: #fff;
        text-decoration: underline;
    }

    iframe {
        border: 0;
        overflow: hidden;
        .mbl;
        .mtx;
        opacity: .8;
    }

    .pane {
        -webkit-transition-property: visibility, opacity;
        -webkit-transition-duration: 1000ms;
        -moz-transition-property: visibility, opacity;
        -moz-transition-duration: 1000ms;

        opacity: 0;
        visibility: hidden;
    }

    .visible {
        visibility: visible;
        opacity: 1;
    }
}

.menu {
    text-align: right;
    white-space: nowrap;
}

.trailer-status {
    text-align: center;
    height: 36px;

    div {
        width: 8px; height: 8px; .border-radius(4px); background: #000; opacity: .6; display: inline-block; margin: 0 5px; cursor: pointer;
        -webkit-transition-property: background, opacity;
        -webkit-transition-duration: 500ms;
        -moz-transition-property: background, opacity;
        -moz-transition-duration: 500ms;
    }

    .active {
        background: #fff; opacity: .7;
    }
}

.search {
    display: inline-block;
    .search-input {
        width: 100px;
        color: #8F8B88;
        vertical-align: baseline;
        .mrx;
        .mlx;
        margin-top: 0px;
    }
}

/* Mobile specific adjustments */
@media handheld, only screen and (max-width: 900px) {
    .menu {
        text-align: left;
        white-space: normal;
    }

    .search {
        display: none;
    }

    .nav,
    .nav li{
        display: block;
    }

    /* Hide the active arrow */
    .nav .active a:after {
        background: none;
        display: none !important;
    }

    .dropdown {
        width: auto;
        left: 15px;
        right: 15px;
        top: 178px;
        .man;
        .pan;
    }

    .dropdown ul {
        .man;
        .pan;
        display: block;
    }

    /* Forms */
    .name .col-6 > div {
        .mrn;
        .mbl;
    }

    input {
        width: 100%;
    }
}

